@@ -346,6 +346,8 @@ $labels['messageoptions'] = 'Opcje wiadomości...';
 $labels['followupto'] = 'Kontynuacja do';
 $labels['replyall'] = 'Odpowiedz wszystkim';
 $labels['replylist'] = 'Odpowiedz na listę';
+$labels['forwardinline'] = 'Prześlij w treści';
+$labels['forwardattachment'] = 'Prześlij jako załącznik';
 $labels['editidents'] = 'Edytuj tożsamości';
 $labels['addfollowupto'] = 'Dodaj Followup-To';
 $labels['dsn'] = 'Status dostarczenia (DSN)';
