@@ -1,0 +1,7 @@
+<div id="forwardmenu" class="popupmenu">
+    <ul>
+        <li><roundcube:button command="forward" label="forwardinline" prop="sub" classAct="forwardlink active" class="forwardlink" /></li>
+        <li><roundcube:button command="forward-attachment" label="forwardattachment" prop="sub" classAct="forwardattachmentlink active" class="forwardattachmentlink" /></li>
+        <roundcube:container name="forwardmenu" id="forwardmenu" />
+    </ul>
+</div>
